--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -31,7 +31,6 @@
         "fs-extra": "^10.0.0",
         "html-webpack-plugin": "^5.5.0",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.4.3",
         "jest-resolve": "^27.4.2",
         "jest-watch-typeahead": "^1.0.0",
         "js-cookie": "^3.0.5",
@@ -92,7 +91,9 @@
         "@babel/plugin-transform-class-properties": "^7.22.5",
         "@babel/plugin-transform-private-methods": "^7.22.5",
         "@babel/plugin-transform-private-property-in-object": "^7.22.11",
-        "babel-plugin-prismjs": "^2.1.0"
+        "babel-plugin-prismjs": "^2.1.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0"
     },
     "jest": {
         "roots": [
