--- a/serverBlog/package.json
+++ b/serverBlog/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "ws": "^8.14.2"
